# go-terminal-app

./: .gitignore  README.md  go-terminal-app.cabal  stack.yaml
app/: Main.hs
docs/: Projectspec.md
src/App/: CLI.hs
src/Game/: BFS.hs  Engine.hs  Types.hs
src/Network/: Bootstrap.hs  ByteStringJSON.hs  Config.hs  Events.hs  GameState.hs  Gossip.hs  Membership.hs  Messages.hs  Node.hs  SocketSimple.hs  TCP.hs  Thread.hs  Transport.hs  WireMsg.hs
src/Network/Gossip/: Plumtree.hs
src/Network/Membership/: HyParView.hs
src/UI/: Board.hs  Buttons.hs  ConfigUI.hs  Event.hs  MainMenu.hs  Overlay.hs  Theme.hs  UI.hs
test/: Mocks.hs
test/Game/: EngineSpec.hs
test/Network/: ConfigSpec.hs  TransportSpec.hs
test/UI/: BoardSpec.hs  ThemeSpec.hs
