cabal-version:       2.2
name:                go-terminal-app
version:             0.1.0.0
synopsis:            Terminal-based Go board game
description:         Play the game of Go in your terminal with this Brick-based UI
homepage:            https://github.com/yourusername/go-terminal-app
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2025 Author name here
category:            Game
build-type:          Simple
extra-source-files:  README.md

executable go-terminal-app
  main-is:             Main.hs
  hs-source-dirs:      app, src
  default-language:    Haskell2010
  other-modules:       Game.Types
                     , Game.Engine
                     , Game.BFS
                     , UI.UI
                     , UI.Board
                     , UI.Theme
                     , UI.Buttons
                     , UI.Overlay
                     , UI.Event
  build-depends:       base >= 4.7 && < 5
                     , brick >= 0.70 && < 0.71
                     , vector
                     , containers
                     , vty >= 5.38 && < 5.39
                     , text
                     , data-clist
                     , text-zipper
                     , word-wrap
                     , config-ini >= 0.2.7.0 && < 0.3
                     , microlens
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N