cabal-version: 2.2
name: go-terminal-app
version: 0.1.0.0
synopsis: Terminal-based Go board game
description: Play the game of Go in your terminal with this Brick-based UI
license: BSD-3-Clause
license-file: LICENSE
author: Your Name
maintainer: your.email@example.com
copyright: 2023 Your Name
category: Game
build-type: Simple

library
  exposed-modules:
    App.CLI
    Game.BFS
    Game.Engine
    Game.Types
    Network.Config
    Network.SocketSimple
    Network.TCP
    Network.WireMsg
    UI.Board
    UI.Buttons
    UI.ConfigUI
    UI.Event
    UI.MainMenu
    UI.Overlay
    UI.Theme
    UI.UI
  hs-source-dirs:
    src
  build-depends:
    base               >=4.18 && <4.21,
    aeson              >=2,
    async              >=2.2,
    brick              >=2.3,
    bytestring,
    containers,
    microlens          >=0.4,
    network            >=3.1,
    optparse-applicative >=0.17,
    stm                >=2.5,
    text,
    vector,
    vty                >=6,
    vty-crossplatform  >=0.4
  default-language: Haskell2010
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -threaded
  default-extensions:
    DeriveGeneric
    OverloadedStrings
    ScopedTypeVariables
    LambdaCase
    GeneralizedNewtypeDeriving
    NumericUnderscores

executable go-terminal-app
  main-is: Main.hs
  hs-source-dirs: app
  default-language: Haskell2010
  build-depends:
    base               >=4.18 && <4.21,
    async              >=2.2,
    brick              >=2.3,
    bytestring,
    containers,
    go-terminal-app,
    network            >=3.1,
    optparse-applicative >=0.17,
    stm                >=2.5,
    text,
    vector,
    vty                >=6,
    vty-crossplatform  >=0.4
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall

-- TODO: Rewrite tests to accommodate the refactored modules and CLI
test-suite go-terminal-app-test
  buildable: False
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules:
    Game.EngineSpec
    Mocks
    Network.ConfigSpec
    UI.BoardSpec
    UI.ThemeSpec
  build-depends:
    base               >=4.18 && <4.21,
    brick              >=2.3,
    bytestring,
    containers,
    go-terminal-app,
    hspec              >=2.0.0,
    hspec-discover,
    text,
    vector,
    vty                >=6
  default-language: Haskell2010
  ghc-options: -threaded -rtsopts -with-rtsopts=-N